--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
     <head>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"> -->
         <link rel="stylesheet" href="index.css">
     </head>
-    <body>
-        
+    <body>  
         <h1 id="title">🤖 BoredBot 🤖</h1>
         <h4 id="idea">Find something to do</h4>
         <div id="img-el"></div>        
